# pairing

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
buildsync-archicad-addon/: CMakeLists.txt  CMakePresets.json  README.md
buildsync-archicad-addon/RFIX/: BuildSyncAssemblyWrapperFix.grc
buildsync-archicad-addon/RFIX.win/: BuildSyncAssemblyWrapper.rc2
buildsync-archicad-addon/RINT/: BuildSyncAssemblyWrapper.grc
buildsync-archicad-addon/apx-duplicate-slab-pipeline/: BuildSyncAssemblyWrapper.apx
buildsync-archicad-addon/apx-duplicate-slab-pipeline-v2/: BuildSyncAssemblyWrapper.apx
buildsync-archicad-addon/apx-duplicate-slab-pipeline-v3/: BuildSyncAssemblyWrapper.apx
buildsync-archicad-addon/apx-edited-placement-identity-guard/: BuildSyncAssemblyWrapper.apx
buildsync-archicad-addon/apx-edited-placement-identity-guard-v2/: BuildSyncAssemblyWrapper.apx
buildsync-archicad-addon/apx-metadata-verified-reconciliation/: BuildSyncAssemblyWrapper.apx
buildsync-archicad-addon/apx-metadata-verified-reconciliation-v2/: BuildSyncAssemblyWrapper.apx
buildsync-archicad-addon/build-apx-copyable-warning-v142/: ALL_BUILD.vcxproj  BuildSyncArchicadAddon.slnx  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildsync_addon_shell_tests.vcxproj  buildsync_addon_shell_tests.vcxproj.filters  buildsync_archicad_addon.vcxproj  buildsync_archicad_addon.vcxproj.filters  buildsync_archicad_resources.vcxproj  buildsync_archicad_resources.vcxproj.filters  buildsync_core.vcxproj  buildsync_core.vcxproj.filters  buildsync_core_tests.vcxproj  buildsync_core_tests.vcxproj.filters  buildsync_native_runtime_tests.vcxproj  buildsync_native_runtime_tests.vcxproj.filters  buildsync_sync_tests.vcxproj  buildsync_sync_tests.vcxproj.filters  cmake_install.cmake
buildsync-archicad-addon/build-apx-duplicate-slab-fix/: ALL_BUILD.vcxproj  BuildSyncArchicadAddon.slnx  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildsync_addon_shell_tests.vcxproj  buildsync_addon_shell_tests.vcxproj.filters  buildsync_archicad_addon.vcxproj  buildsync_archicad_addon.vcxproj.filters  buildsync_archicad_resources.vcxproj  buildsync_archicad_resources.vcxproj.filters  buildsync_core.vcxproj  buildsync_core.vcxproj.filters  buildsync_core_tests.vcxproj  buildsync_core_tests.vcxproj.filters  buildsync_native_runtime_tests.vcxproj  buildsync_native_runtime_tests.vcxproj.filters  buildsync_sync_tests.vcxproj  buildsync_sync_tests.vcxproj.filters  cmake_install.cmake
buildsync-archicad-addon/build-apx-duplicate-slab-fix-v142/: ALL_BUILD.vcxproj  BuildSyncArchicadAddon.slnx  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildsync_addon_shell_tests.vcxproj  buildsync_addon_shell_tests.vcxproj.filters  buildsync_archicad_addon.vcxproj  buildsync_archicad_addon.vcxproj.filters  buildsync_archicad_resources.vcxproj  buildsync_archicad_resources.vcxproj.filters  buildsync_core.vcxproj  buildsync_core.vcxproj.filters  buildsync_core_tests.vcxproj  buildsync_core_tests.vcxproj.filters  buildsync_native_runtime_tests.vcxproj  buildsync_native_runtime_tests.vcxproj.filters  buildsync_sync_tests.vcxproj  buildsync_sync_tests.vcxproj.filters  cmake_install.cmake
buildsync-archicad-addon/build-apx-edit-placement-propagation-v142/: ALL_BUILD.vcxproj  BuildSyncArchicadAddon.slnx  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildsync_addon_shell_tests.vcxproj  buildsync_addon_shell_tests.vcxproj.filters  buildsync_archicad_addon.vcxproj  buildsync_archicad_addon.vcxproj.filters  buildsync_archicad_resources.vcxproj  buildsync_archicad_resources.vcxproj.filters  buildsync_core.vcxproj  buildsync_core.vcxproj.filters  buildsync_core_tests.vcxproj  buildsync_core_tests.vcxproj.filters  buildsync_native_runtime_tests.vcxproj  buildsync_native_runtime_tests.vcxproj.filters  buildsync_sync_tests.vcxproj  buildsync_sync_tests.vcxproj.filters  cmake_install.cmake
buildsync-archicad-addon/build-apx-edited-slab-cleanup-v142/: ALL_BUILD.vcxproj  BuildSyncArchicadAddon.slnx  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildsync_addon_shell_tests.vcxproj  buildsync_addon_shell_tests.vcxproj.filters  buildsync_archicad_addon.vcxproj  buildsync_archicad_addon.vcxproj.filters  buildsync_archicad_resources.vcxproj  buildsync_archicad_resources.vcxproj.filters  buildsync_core.vcxproj  buildsync_core.vcxproj.filters  buildsync_core_tests.vcxproj  buildsync_core_tests.vcxproj.filters  buildsync_native_runtime_tests.vcxproj  buildsync_native_runtime_tests.vcxproj.filters  buildsync_sync_tests.vcxproj  buildsync_sync_tests.vcxproj.filters  cmake_install.cmake
buildsync-archicad-addon/build-apx-geometry-trace-v142/: ALL_BUILD.vcxproj  BuildSyncArchicadAddon.slnx  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildsync_addon_shell_tests.vcxproj  buildsync_addon_shell_tests.vcxproj.filters  buildsync_archicad_addon.vcxproj  buildsync_archicad_addon.vcxproj.filters  buildsync_archicad_resources.vcxproj  buildsync_archicad_resources.vcxproj.filters  buildsync_core.vcxproj  buildsync_core.vcxproj.filters  buildsync_core_tests.vcxproj  buildsync_core_tests.vcxproj.filters  buildsync_native_runtime_tests.vcxproj  buildsync_native_runtime_tests.vcxproj.filters  buildsync_sync_tests.vcxproj  buildsync_sync_tests.vcxproj.filters  cmake_install.cmake
buildsync-archicad-addon/build-apx-geometry-trace-v142b/: ALL_BUILD.vcxproj  BuildSyncArchicadAddon.slnx  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildsync_addon_shell_tests.vcxproj  (+14 more)
(+3491 files in other folders)
